<?xml version="1.0"?>
<package>
  <name>csi_camera</name>
  <version>0.6.0</version>
  <description>Jetson nano CSI camera demo.</description>

  <maintainer email="1260105099@qq.com">AndyJen</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
