<package format="2">
  <name>mbs_pid</name>
  <version>0.0.1</version>
  <description>
    mbs_robot PID dynamic_reconfigure
  </description>
  <maintainer email="1260105099@qq.com">AndyJen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
